--- a/beginning.html
+++ b/beginning.html
@@ -1,5 +1,19 @@
 <html>
     <center>
-        <a href="./culminating.html">Continue to webpage</a>
+        <a href="./culminating.html">
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            Continue to webpage
+        </a>
     </center>
 </html>
