--- a/culminating.html
+++ b/culminating.html
@@ -36,7 +36,7 @@
     </style>
     <audio src="music.mp3" autoplay loop></audio>
     <div class="sidenav">
-        <a href="./culminating.html" style="color:#ffffff;text-shadow:0 0 15px #ffffff;">Sidebar</a>
+        <a href="./culminating.html" style="color:#ffffff;text-shadow:0 0 15px #ffffff;">Introduction</a>
         <a href="./culminating2.html">list</a>
         <a href="./culminating3.html">for</a>
         <a href="./culminating4.html">navigation</a>
