--- a/culminating2.html
+++ b/culminating2.html
@@ -36,7 +36,7 @@
     </style>
     <audio src="music2.mp3" autoplay loop></audio>
     <div class="sidenav">
-        <a href="./culminating.html">Sidebar</a>
+        <a href="./culminating.html">Introduction</a>
         <a href="./culminating2.html" style="color:#ffffff;text-shadow:0 0 15px #ffffff;">list</a>
         <a href="./culminating3.html">for</a>
         <a href="./culminating4.html">navigation</a>
