--- a/culminating.html
+++ b/culminating.html
@@ -1,37 +1,43 @@
 <html>
     <style>
         p {
-        font-family:arial;
+            font-family:arial;
         }
         .sidenav {
-        height: 100%;
-        width: 260px;
-        position: fixed;
-        z-index: 1;
-        top: 0;
-        left: 0;
-        background-color: #111;
-        overflow-x: hidden;
-        padding-top: 20px;
+            height: 100%;
+            width: 260px;
+            position: fixed;
+            z-index: 1;
+            top: 0;
+            left: 0;
+            background-color: #111;
+            overflow-x: hidden;
+            padding-top: 20px;
         }
         .sidenav a {
-        padding: 6px 8px 6px 16px;
-        text-decoration: none;
-        font-size: 25px;
-        color: #818181;
-        display: block;
-        font-family:arial;
+            padding: 6px 8px 6px 16px;
+            text-decoration: none;
+            font-size: 25px;
+            color: #818181;
+            display: block;
+            font-family:arial;
         }
         .sidenav a:hover {
-        color: #ffffff;
+            color: #ffffff;
         }
         .main {
-        margin-left: 265px;
-        font-size: 28px;
-        padding: 0px 10px;
-        background-image: url('');
-        background-attachment: fixed;
-        background-size: cover;
+            margin-left: 265px;
+            font-size: 28px;
+            padding: 0px 10px;
+            background-image: url('');
+            background-attachment: fixed;
+            background-size: cover;
+        }
+        .head {
+            background-color: #000000;
+            margin-left: 265px;
+            height: 200px;
+            top: 0;
         }
     </style>
     <audio src="music.mp3" autoplay loop></audio>
@@ -46,6 +52,6 @@
             <h1>Title</h1>
         </center>
         <h2><i>Subheading</i></h2>
-        <p>lorem ipsum uhhhhh</p>
+        <p>lorem ipsum</p>
     </div>
 </html>
