--- a/culminating.html
+++ b/culminating.html
@@ -39,6 +39,9 @@
             height: 200px;
             top: 0;
         }
+        .head h1 {
+            font-color: #00ff00;
+        }
     </style>
     <audio src="music.mp3" autoplay loop></audio>
     <div class="sidenav">
@@ -47,10 +50,12 @@
         <a href="./culminating3.html">for</a>
         <a href="./culminating4.html">navigation</a>
     </div>
-    <div class="main">
+    <div class="head">
         <center>
             <h1>Title</h1>
         </center>
+    </div>
+    <div class="main">
         <h2><i>Subheading</i></h2>
         <p>lorem ipsum</p>
     </div>
