--- a/culminating.html
+++ b/culminating.html
@@ -35,12 +35,12 @@
         }
         .head {
             background-color: #000000;
-            margin-left: 265px;
-            height: 200px;
-            top: 0;
+            margin-left: 260px;
+            padding: 50px 0;
         }
         .head h1 {
-            font-color: #00ff00;
+            color: #00ff00;
+            font-size: 50px;
         }
     </style>
     <audio src="music.mp3" autoplay loop></audio>
