--- a/culminating.html
+++ b/culminating.html
@@ -33,15 +33,6 @@
             background-attachment: fixed;
             background-size: cover;
         }
-        .head {
-            background-color: #000000;
-            margin-left: 260px;
-            padding: 50px 0;
-        }
-        .head h1 {
-            color: #00ff00;
-            font-size: 50px;
-        }
     </style>
     <audio src="music.mp3" autoplay loop></audio>
     <div class="sidenav">
@@ -50,12 +41,10 @@
         <a href="./culminating3.html">for</a>
         <a href="./culminating4.html">navigation</a>
     </div>
-    <div class="head">
-        <center>
-            <h1>Title</h1>
-        </center>
-    </div>
     <div class="main">
+        <center>
+            <h1>How Do Computers Affect Life?</h1>
+        </center>
         <h2><i>Subheading</i></h2>
         <p>lorem ipsum</p>
     </div>
