--- a/culminating2.html
+++ b/culminating2.html
@@ -42,10 +42,7 @@
         <a href="./culminating4.html">navigation</a>
     </div>
     <div class="main">
-        <center>
-            <h1>Title</h1>
-        </center>
-        <h2><i>Subheading</i></h2>
+        <h2><i>Positive Effects On The Environment</i></h2>
         <p>it works</p>
     </div>
 </html>
