--- a/culminating3.html
+++ b/culminating3.html
@@ -42,10 +42,7 @@
         <a href="./culminating4.html">navigation</a>
     </div>
     <div class="main">
-        <center>
-            <h1>Title</h1>
-        </center>
-        <h2><i>Subheading</i></h2>
+        <h2><i>Positive Effects On Human Health</i></h2>
         <p>uh</p>
     </div>
 </html>
