--- a/culminating.html
+++ b/culminating.html
@@ -45,7 +45,7 @@
         <center>
             <h1>How Do Computers Affect Life?</h1>
         </center>
-        <h2><i>Subheading</i></h2>
+        <h2><i>Introduction</i></h2>
         <p>lorem ipsum</p>
     </div>
 </html>
