--- a/culminating2.html
+++ b/culminating2.html
@@ -44,5 +44,7 @@
     <div class="main">
         <h2><i>Positive Effects On The Environment</i></h2>
         <p>it works</p>
+        <h2><i>Negative Effects On The Environment</i></h2>
+        <p>...</p>
     </div>
 </html>
