--- a/culminating4.html
+++ b/culminating4.html
@@ -37,15 +37,12 @@
     <audio src="music4.mp3" autoplay loop></audio>
     <div class="sidenav">
         <a href="./culminating.html">Introduction</a>
-        <a href="./culminating2.html">list</a>
-        <a href="./culminating3.html">for</a>
-        <a href="./culminating4.html" style="color:#ffffff;text-shadow:0 0 15px #ffffff;">navigation</a>
+        <a href="./culminating2.html">Environment</a>
+        <a href="./culminating3.html">Human Health</a>
+        <a href="./culminating4.html" style="color:#ffffff;text-shadow:0 0 15px #ffffff;">Conclusion</a>
     </div>
     <div class="main">
-        <center>
-            <h1>Title</h1>
-        </center>
-        <h2><i>Subheading</i></h2>
+        <h2><i>Conclusion</i></h2>
         <p>bro momento</p>
     </div>
 </html>
