--- a/culminating.html
+++ b/culminating.html
@@ -37,9 +37,9 @@
     <audio src="music.mp3" autoplay loop></audio>
     <div class="sidenav">
         <a href="./culminating.html" style="color:#ffffff;text-shadow:0 0 15px #ffffff;">Introduction</a>
-        <a href="./culminating2.html">list</a>
-        <a href="./culminating3.html">for</a>
-        <a href="./culminating4.html">navigation</a>
+        <a href="./culminating2.html">Environment</a>
+        <a href="./culminating3.html">Human Health</a>
+        <a href="./culminating4.html">Conclusion</a>
     </div>
     <div class="main">
         <center>
