--- a/culminating2.html
+++ b/culminating2.html
@@ -70,7 +70,9 @@
                 </tr>
                 <tr>
                     <td>
-                        <p style="color:#878787;font-size:15px;">E-waste is a big problem.</p>
+                        <center>
+                            <p style="color:#878787;font-size:15px;">E-waste is a big problem.</p>
+                        </center>
                     </td>
                 </tr>
             </table>
