--- a/culminating.html
+++ b/culminating.html
@@ -45,7 +45,11 @@
         <center>
             <h1>How Do Computers Affect Life?</h1>
         </center>
-        <h2><i>Introduction</i></h2>
-        <p>lorem ipsum</p>
+        <img src="https://i.pinimg.com/originals/2b/84/53/2b8453d9c9f6e1e1c35dcb523e516478.jpg" width="100%">
+        <p>Computers have made their ways into every aspect of human life. Today, we will delve into the intriguing and complex relationship between computers and their impact on the environment and human health. In today's interconnected world, computers have become an integral part of our daily lives, revolutionizing the way we work, communicate, and access information. However, the widespread adoption of technology has not come without consequences.
+        <br>
+        <br>
+        <br>
+        Let's see how computers have affected the environment and human health.</p>
     </div>
 </html>
