--- a/culminating4.html
+++ b/culminating4.html
@@ -43,6 +43,6 @@
     </div>
     <div class="main">
         <h2><i>Conclusion</i></h2>
-        <p>bro momento</p>
+        <p>Computers have undoubtedly brought substantial benefits to the environment and human health, ranging from energy efficiency and improved diagnostics to enhanced access to information. However, it is crucial to address the negative effects, such as e-waste, energy consumption, and potential health concerns associated with computer usage. Striking a balance between harnessing the positive impacts and mitigating the negative aspects is crucial for a sustainable and healthy future.</p>
     </div>
 </html>
