--- a/culminating3.html
+++ b/culminating3.html
@@ -41,9 +41,9 @@
     <audio src="music3.mp3" autoplay loop></audio>
     <div class="sidenav">
         <a href="./culminating.html">Introduction</a>
-        <a href="./culminating2.html">list</a>
-        <a href="./culminating3.html" style="color:#ffffff;text-shadow:0 0 15px #ffffff;">for</a>
-        <a href="./culminating4.html">navigation</a>
+        <a href="./culminating2.html">Environment</a>
+        <a href="./culminating3.html" style="color:#ffffff;text-shadow:0 0 15px #ffffff;">Human Health</a>
+        <a href="./culminating4.html">Conclusion</a>
     </div>
     <div class="main">
         <ol>
